WIP: History limit
